--- a/Maze3D.cbp
+++ b/Maze3D.cbp
@@ -7,11 +7,14 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="Maze3D" prefix_auto="1" extension_auto="1" />
+				<Option output="MazeDebug" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-Weffc++" />
+					<Add option="-pedantic" />
+					<Add option="-Wextra" />
 					<Add option="-g" />
 				</Compiler>
 				<Linker>
@@ -21,7 +24,7 @@
 				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="Maze3D" prefix_auto="1" extension_auto="1" />
+				<Option output="Maze" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
