--- a/Maze3D.cbp
+++ b/Maze3D.cbp
@@ -50,11 +50,17 @@
 		<Unit filename="src/Camera.hpp" />
 		<Unit filename="src/Cube.cpp" />
 		<Unit filename="src/Cube.hpp" />
+		<Unit filename="src/Face.cpp" />
+		<Unit filename="src/Face.hpp" />
 		<Unit filename="src/Globals.cpp" />
 		<Unit filename="src/Globals.hpp" />
+		<Unit filename="src/Maze.cpp" />
+		<Unit filename="src/Maze.hpp" />
 		<Unit filename="src/Maze3DMain.cpp" />
 		<Unit filename="src/MazeRoom.cpp" />
 		<Unit filename="src/MazeRoom.hpp" />
+		<Unit filename="src/Room.cpp" />
+		<Unit filename="src/Room.hpp" />
 		<Unit filename="src/Texture.cpp" />
 		<Unit filename="src/Texture.hpp" />
 		<Unit filename="src/Vec3D.cpp" />
