--- a/Maze3D.cbp
+++ b/Maze3D.cbp
@@ -13,7 +13,6 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
-					<Add option="-Weffc++" />
 					<Add option="-pedantic" />
 					<Add option="-Wextra" />
 					<Add option="-g" />
@@ -56,6 +55,8 @@
 		<Unit filename="Ideas.txt" />
 		<Unit filename="src/Cube.cpp" />
 		<Unit filename="src/Cube.hpp" />
+		<Unit filename="src/Face.cpp" />
+		<Unit filename="src/Face.hpp" />
 		<Unit filename="src/Maze.cpp" />
 		<Unit filename="src/Maze.hpp" />
 		<Unit filename="src/Maze3DMain.cpp" />
@@ -65,6 +66,8 @@
 		<Unit filename="src/RNG.hpp" />
 		<Unit filename="src/Room.cpp" />
 		<Unit filename="src/Room.hpp" />
+		<Unit filename="src/Wall.cpp" />
+		<Unit filename="src/Wall.hpp" />
 		<Extensions />
 	</Project>
 </CodeBlocks_project_file>
